--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Ike Lim</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Ike Lim</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -34,36 +34,76 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
+							<h2>Ike Lim</h2>
+							<p>A Level's Computing Student<br />
+							from Anglo Chinese Junior<br />
+							College (ACJC).</p>
+							<ul class="icons">
+								<li class="ig"><a href="https://www.instagram.com/ikeawesom" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/ikeawesom/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://github.com/W-Appz/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/ike-lim-633049250/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#about" class="more scrolly">See More</a>
 					</section>
 
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
-						</div>
-					</section>
+				<!-- About -->
+				<section id="about" class="wrapper style3 special">
+					<div class="inner">
+						<header class="major">
+							<h2>Accumsan mus tortor nunc aliquet</h2>
+							<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+							fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+						</header>
+						<ul class="features">
+							<li class="icon fa-paper-plane">
+								<h3>Arcu accumsan</h3>
+								<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+							</li>
+							<li class="icon solid fa-laptop">
+								<h3>Ac Augue Eget</h3>
+								<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+							</li>
+							<li class="icon solid fa-code">
+								<h3>Mus Scelerisque</h3>
+								<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+							</li>
+							<li class="icon solid fa-headphones-alt">
+								<h3>Mauris Imperdiet</h3>
+								<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+							</li>
+							<li class="icon fa-heart">
+								<h3>Aenean Primis</h3>
+								<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+							</li>
+							<li class="icon fa-flag">
+								<h3>Tortor Ut</h3>
+								<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+							</li>
+						</ul>
+					</div>
+				</section>
 
-				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
+				<!-- Project Banner -->
+				<section id="project_banner" class="wrapper style6">
+					<div class="inner">
+						<header class="major">
+							<h2>Projects</h2>
+							<p> Being a programming enthusiast, I have worked on some projects - some in my own time and others assigned.</p>
+							<p> Take a look below.</p>				
+						</header>
+						<ul class="icons major">
+							<!-- <i class="fa-brands fa-java"></i> -->
+							<li><span class="icon brands fa-java major"><span class="label">Lorem</span></span></li>
+							<li><span class="icon brands fa-python major"><span class="label">Ipsum</span></span></li>
+							<li><span class="icon brands fa-js major"><span class="label">Dolor</span></span></li>
+							<li><span class="icon brands fa-html5 major"><span class="label">Dolor</span></span></li>
+						</ul>
+					</div>
+				</section>
+				<!-- Projects -->
+					<section id="projects" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Magna primis lobortis<br />
@@ -86,44 +126,7 @@
 							</div>
 						</section>
 					</section>
-
-				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
-							<ul class="features">
-								<li class="icon fa-paper-plane">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon solid fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon solid fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon solid fa-headphones-alt">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-heart">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-							</ul>
-						</div>
-					</section>
-
+				
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
@@ -140,13 +143,6 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
