organised sections and hover properties

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
-
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="index.html">Ike Lim</a></h1>
@@ -21,9 +20,9 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
+											<li><a class="more scrolly" href="#banner">Home</a></li>
+											<li><a class="more scrolly" href="#about">About Me</a></li>
+											<li><a class="more scrolly" href="#project_banner">Projects</a></li>
 										</ul>
 									</div>
 								</li>
@@ -32,29 +31,28 @@
 					</header>
 
 				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Ike Lim</h2>
-							<p>A Level's Computing Student<br />
-							from Anglo Chinese Junior<br />
-							College (ACJC).</p>
-							<ul class="icons">
-								<li class="ig"><a href="https://www.instagram.com/ikeawesom" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/ikeawesom/" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://github.com/W-Appz/" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://www.linkedin.com/in/ike-lim-633049250/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							</ul>
-						</div>
-						<a href="#about" class="more scrolly">See More</a>
-					</section>
+				<section id="banner">
+					<div>
+						<h2>Ike Lim</h2>
+						<p>just a student who enjoys coding <br> and software development</p>
+						<ul class="icons">
+							<li class="ig"><a href="https://www.instagram.com/ikeawesom" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/ikeawesom/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://github.com/W-Appz/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.linkedin.com/in/ike-lim-633049250/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						</ul>
+					</div>
+					<a href="#about" class="more scrolly">See More</a>
+				</section>
 
 				<!-- About -->
-				<section id="about" class="wrapper style3 special">
+				<section id="about" class="wrapper style2 special">
 					<div class="inner">
 						<header class="major">
-							<h2>Accumsan mus tortor nunc aliquet</h2>
-							<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-							fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+							<h2>About Me</h2>
+							<p>Hi there. My name is Ike (ai-ke) and I am currently studying in Anglo-Chinese Junior College (ACJC).<br />
+							I take a fairly odd subject combination: H2 Maths, H2 Chemistry, H2 Computing and H1 Geography,<br>
+							which isn't something you see everyday. </p>
 						</header>
 						<ul class="features">
 							<li class="icon fa-paper-plane">
