--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; 2022 Ike Lim </li>
 						</ul>
 					</footer>
 
