changed copyright tag

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; 2022 Ike Lim </li>
+							Copyright <li>&copy; 2022 Ike Lim. All rights reserved. </li>
 						</ul>
 					</footer>
 
