--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<li><a href="https://www.linkedin.com/in/ike-lim-633049250/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</div>
-					<a href="#about" class="more scrolly">See More</a>
+					<a href="#about" class="more scrolly">View more</a>
 				</section>
 
 				<!-- About -->
