added passSafe page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 											<li><a class="more scrolly" href="#banner">Home</a></li>
 											<li><a class="more scrolly" href="#about">About Me</a></li>
 											<li><a class="more scrolly" href="#project_banner">Projects</a></li>
+											<li><a href="passsafe.html">PassSafe</a></li>
 										</ul>
 									</div>
 								</li>
@@ -42,7 +43,7 @@
 							<li><a href="https://www.linkedin.com/in/ike-lim-633049250/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</div>
-					<a href="#about" class="more scrolly">See More</a>
+					<a href="#about" class="more scrolly">View more</a>
 				</section>
 
 				<!-- About -->
@@ -141,8 +142,14 @@
 
 				<!-- Footer -->
 					<footer id="footer">
+						<ul class="icons">
+							<li class="ig"><a href="https://www.instagram.com/ikeawesom" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/ikeawesom/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://github.com/W-Appz/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.linkedin.com/in/ike-lim-633049250/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							Copyright <li>&copy; 2022 Ike Lim. All rights reserved. </li>
 						</ul>
 					</footer>
 
