edit about page

--- a/index.html
+++ b/index.html
@@ -51,15 +51,18 @@
 					<div class="inner">
 						<header class="major">
 							<h2>About Me</h2>
-							<p>Hi there. My name is Ike (ai-ke) and I am currently studying in Anglo-Chinese Junior College (ACJC).<br />
-							I take a fairly odd subject combination: H2 Maths, H2 Chemistry, H2 Computing and H1 Geography,<br>
-							which isn't something you see everyday. </p>
+							<p>Hi there. My name is Ike (ai-ke). Software development and cybersecurity are two of the many technologically related fields that I am passionate about
+								since young. I have worked on many <a class="more scrolly" href="#project_banner">projects</a> on my own and participated in several events in these fields.
+							</p>
 						</header>
+
+						<h3 style="text-align: left;"> 2022 </h3>
 						<ul class="features">
 							<li class="icon fa-paper-plane">
 								<h3>Arcu accumsan</h3>
 								<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 							</li>
+							
 							<li class="icon solid fa-laptop">
 								<h3>Ac Augue Eget</h3>
 								<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
