finished about me

--- a/index.html
+++ b/index.html
@@ -55,35 +55,48 @@
 								since young. I have worked on many <a class="more scrolly" href="#project_banner">projects</a> on my own and participated in several events in these fields.
 							</p>
 						</header>
-
-						<h3 style="text-align: left;"> 2022 </h3>
-						<ul class="features">
-							<li class="icon fa-paper-plane">
-								<h3>Arcu accumsan</h3>
-								<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-							</li>
-							
-							<li class="icon solid fa-laptop">
-								<h3>Ac Augue Eget</h3>
-								<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-							</li>
-							<li class="icon solid fa-code">
-								<h3>Mus Scelerisque</h3>
-								<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-							</li>
-							<li class="icon solid fa-headphones-alt">
-								<h3>Mauris Imperdiet</h3>
-								<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-							</li>
-							<li class="icon fa-heart">
-								<h3>Aenean Primis</h3>
-								<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-							</li>
-							<li class="icon fa-flag">
-								<h3>Tortor Ut</h3>
-								<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-							</li>
-						</ul>
+						<header class="major">
+							<h2> Timeline </h2>
+							<p class="years"> 2021 - 2022 </p>
+							<ul class="features">
+								<li class="icon solid fa-laptop-code">
+									<h3>Sentinels</h3>
+									<p class="sub">Ministry of Defence (MINDEF), SAFC4I</p>
+									<p>Cybersecurity Course (June 2022)</p>
+								</li>
+								<li class="icon solid fa-terminal">
+									<h3>DSTA X HCI Cyberthon</h3>
+									<p class="sub">Defence Science and Technology Agency</p>
+									<p>Top 20 teams in Singapore (May 2022) </p>
+								</li>
+								<li class="icon solid fa-code">
+									<h3>National Olympiad in Informatics</h3>
+									<p class="sub">National University of Singapore</p>
+									<p>Bronze Medal and top 3 in the school (March 2022)</p>
+								</li>
+								<li class="icon solid fa-file-code">
+									<h3> Canadian Computing Competition </h3>
+									<p class="sub">University of Waterloo</p>
+									<p>Distinction in junior category (February 2022)</p>
+								</li>
+								<li class="icon solid fa-code lastli">
+									<h3>Artificial Intelligence</h3>
+									<p class="sub">Codeavour</p>
+									<p>A.I. course using PictoBlox (November 2021)</p>
+								</li>
+								
+							</ul>
+							<hr>
+							<p class="years"> 2020 </p>
+							<ul class="features">
+								<li class="icon solid fa-graduation-cap lastli">
+									<h3>O Levels</h3>
+									<p class="sub">Ngee Ann Secondary School</p>
+									<p> Distinctions in A-Maths, E-Maths, Chemistry, Physics, Computing and Geography.</p>
+									<p>Senior Sports Leader (2017 - 2020)</p>
+								</li>
+							</ul>
+					</header>
 					</div>
 				</section>
 
@@ -92,16 +105,17 @@
 					<div class="inner">
 						<header class="major">
 							<h2>Projects</h2>
-							<p> Being a programming enthusiast, I have worked on some projects - some in my own time and others assigned.</p>
-							<p> Take a look below.</p>				
-						</header>
+							<p> Of course, I can't call myself a tech guy without some software projects. <br>
+							I enjoy developing elegant and efficient software for people to use.</p>
+							<p> Technlogies I use: </p>				
 						<ul class="icons major">
-							<!-- <i class="fa-brands fa-java"></i> -->
-							<li><span class="icon brands fa-java major"><span class="label">Lorem</span></span></li>
-							<li><span class="icon brands fa-python major"><span class="label">Ipsum</span></span></li>
-							<li><span class="icon brands fa-js major"><span class="label">Dolor</span></span></li>
-							<li><span class="icon brands fa-html5 major"><span class="label">Dolor</span></span></li>
+							<li><span class="icon brands fa-python major"><span class="label">Python</span></span></li>
+							<li><span class="icon brands fa-java major"><span class="label">Java</span></span></li>
+							<li><span class="icon brands fa-js major"><span class="label">Javascript</span></span></li>
+							<li><span class="icon brands fa-html5 major"><span class="label">HTML</span></span></li>
+							<li><span class="icon brands fa-android major"><span class="label">Android</span></span></li>
 						</ul>
+					</header>
 					</div>
 				</section>
 				<!-- Projects -->
@@ -111,6 +125,10 @@
 								<h2>Magna primis lobortis<br />
 								sed ullamcorper</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<ul class="icons major">
+									<li><span class="icon brands fa-android major"><span class="label">Android</span></span></li>
+									<li><span class="icon brands fa-java major"><span class="label">Java</span></span></li>
+								</ul>
 							</div>
 						</section>
 						<section class="spotlight">
