--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" href="images/icon.png">
 	</head>
 	<body class="landing is-preload">
 
@@ -105,44 +106,74 @@
 					<div class="inner">
 						<header class="major">
 							<h2>Projects</h2>
-							<p> Of course, I can't call myself a tech guy without some software projects. <br>
-							I enjoy developing elegant and efficient software for people to use.</p>
+							<p>I enjoy developing elegant and efficient software for people to use.<br>
 							<p> Technlogies I use: </p>				
 						<ul class="icons major">
 							<li><span class="icon brands fa-python major"><span class="label">Python</span></span></li>
 							<li><span class="icon brands fa-java major"><span class="label">Java</span></span></li>
 							<li><span class="icon brands fa-js major"><span class="label">Javascript</span></span></li>
 							<li><span class="icon brands fa-html5 major"><span class="label">HTML</span></span></li>
+							<li><span class="icon major"><img src="images/flask.png" style="width: 46px;"></span></li>
 							<li><span class="icon brands fa-android major"><span class="label">Android</span></span></li>
+							<li><span class="icon brands fa-github major"><span class="label">Github</span></span></li>
 						</ul>
+						Of course, I can't call myself a tech guy without some software projects so here are some of mine. </p>
+						Take a look:
 					</header>
 					</div>
 				</section>
 				<!-- Projects -->
-					<section id="projects" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+					<section id="projects" class="wrapper alt style2 ">
+						<section class="spotlight mainproj">
+							<div class="image"><img src="images/passSafe/project.png" alt="PassSafe" /></div>
+							<div class="content">
+								<span class="icon solid fa-thumbtack fa-1x pinned"></span>
+								<h2>PassSafe<br/>
+								W-Appz</h2>
+								<p>Want to be safe online but too many passwords to remember? Do not fear, PassSafe is here!</p>
+								<p> Find out more <a href="passsafe.html">here</a>.</p>
 								<ul class="icons major">
 									<li><span class="icon brands fa-android major"><span class="label">Android</span></span></li>
 									<li><span class="icon brands fa-java major"><span class="label">Java</span></span></li>
+									<li><span class="icon brands fa-github major"><span class="label">Github</span></span></li>
 								</ul>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/projects/econs.png" alt="Economics Assignment Manager" /></div><div class="content">
+								<h2>Economics Assignment Manager</h2>
+								<p>This project was specially designed to meet to the needs of an economics teacher in ACJC, who needed
+									a more efficient way to mangage the mass submissions of assignments.</p>
+								<p> This made use of python's turtle library to create the simple graphical user interface (GUI), with
+									specific details for the users' desires.
+								</p>
+								<ul class="icons major">
+									<li><span class="icon brands fa-python major"><span class="label">Python</span></span></li>
+								</ul>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/projects/hog.png" alt="Clash Royale HTML" /></div><div class="content">
+								<h2>Clash Royale Character Profile</h2>
+								<p>First HTML project that I did, and with a more personal touch. Game theme used to create a brief storyline
+									using javascript events and audio, ultimately leading up to a character profile with even more features. </p>
+								<ul class="icons major">
+									<li><span class="icon brands fa-html5 major"><span class="label">HTML</span></span></li>
+									<li><span class="icon brands fa-js major"><span class="label">Javascript</span></span></li>
+									<li><span class="icon major"><img src="images/flask.png" style="width: 46px;"></span></li>
+									<li><span class="icon brands fa-python major"><span class="label">Python</span></span></li>
+								</ul>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/projects/site.png" alt="Personal Site" /></div><div class="content">
+								<h2>Personal Site</h2>
+								<p>Wait.. that's this site!</p>
+								<ul class="icons major">
+									<li><span class="icon brands fa-html5 major"><span class="label">HTML</span></span></li>
+									<li><span class="icon brands fa-js major"><span class="label">Javascript</span></span></li>
+									<li><span class="icon brands fa-github major"><span class="label">Github</span></span></li>
+								</ul>
 							</div>
 						</section>
 					</section>
