finished home page

--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Here's a quote to keep you going...</h2>
+								<blockquote id="random_quote"></blockquote>
 							</header>
-							<ul class="actions stacked">
+							<!-- <ul class="actions">
 								<li><a href="#" class="button fit primary">Activate</a></li>
 								<li><a href="#" class="button fit">Learn More</a></li>
-							</ul>
+							</ul> -->
 						</div>
 					</section>
 
