finished home page

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 							<li><span class="icon brands fa-android major"><span class="label">Android</span></span></li>
 							<li><span class="icon brands fa-github major"><span class="label">Github</span></span></li>
 						</ul>
-						Of course, I can't call myself a tech guy without some software projects so here are some of mine. </p>
+						<p>Of course, I can't call myself a tech guy without some software projects so here are some of mine. </p>
 						Take a look:
 					</header>
 					</div>
