--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
 							<h2> Timeline </h2>
 							<p class="years"> 2021 - 2022 </p>
 							<ul class="features">
+								<li class="icon solid fa-school lastli">
+									<h3>Junior College</h3>
+									<p class="sub">Anglo-Chinese Junior College</p>
+									<p> 2021 - Present</p>
+								</li>
 								<li class="icon solid fa-laptop-code">
 									<h3>Sentinels</h3>
 									<p class="sub">Ministry of Defence (MINDEF), SAFC4I</p>
@@ -106,19 +111,18 @@
 					<div class="inner">
 						<header class="major">
 							<h2>Projects</h2>
-							<p>I enjoy developing elegant and efficient software for people to use.<br>
-							<p> Technlogies I use: </p>				
+							<p>I enjoy developing elegant and efficient software that is clean and easy to use.<br>
+							<p> Technlogies I utilise: </p>				
 						<ul class="icons major">
-							<li><span class="icon brands fa-python major"><span class="label">Python</span></span></li>
-							<li><span class="icon brands fa-java major"><span class="label">Java</span></span></li>
-							<li><span class="icon brands fa-js major"><span class="label">Javascript</span></span></li>
-							<li><span class="icon brands fa-html5 major"><span class="label">HTML</span></span></li>
-							<li><span class="icon major"><img src="images/flask.png" style="width: 46px;"></span></li>
-							<li><span class="icon brands fa-android major"><span class="label">Android</span></span></li>
-							<li><span class="icon brands fa-github major"><span class="label">Github</span></span></li>
+							<li style="padding-bottom: 3em;"><span class="icon brands fa-python major"></span></li>
+							<li style="padding-bottom: 3em;"><span class="icon brands fa-java major"></span></li>
+							<li style="padding-bottom: 3em;"><span class="icon brands fa-js major"></span></li>
+							<li style="padding-bottom: 3em;"><span class="icon brands fa-html5 major"><span class="label">HTML</span></span></li>
+							<li style="padding-bottom: 3em;"><span class="icon major"><img src="images/flask.png" style="width: 46px;"></span></li>
+							<li style="padding-bottom: 3em;"><span class="icon brands fa-android major"></span></li>
+							<li style="padding-bottom: 3em;"><span class="icon brands fa-github major"></span></li>
 						</ul>
 						<p>Of course, I can't call myself a tech guy without some software projects so here are some of mine. </p>
-						Take a look:
 					</header>
 					</div>
 				</section>
@@ -148,7 +152,7 @@
 									specific details for the users' desires.
 								</p>
 								<ul class="icons major">
-									<li><span class="icon brands fa-python major"><span class="label">Python</span></span></li>
+									<li><span class="icon brands fa-python major"></span></li>
 								</ul>
 							</div>
 						</section>
