--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 										<ul>
 											<li><a class="more scrolly" href="#banner">Home</a></li>
 											<li><a class="more scrolly" href="#about">About Me</a></li>
-											<li><a class="more scrolly" href="#project_banner">Projects</a></li>
+											<li><a class="more scrolly" href="#projects">Projects</a></li>
 											<li><a href="passsafe.html">PassSafe</a></li>
 										</ul>
 									</div>
@@ -38,10 +38,10 @@
 						<h2>Ike Lim</h2>
 						<p>just a student who enjoys coding <br> and software development</p>
 						<ul class="icons">
-							<li class="ig"><a href="https://www.instagram.com/ikeawesom" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/ikeawesom/" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://github.com/W-Appz/" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://www.linkedin.com/in/ike-lim-633049250/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li class="ig"><a href="https://www.instagram.com/ikeawesom" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/ikeawesom/" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+							<li><a href="https://github.com/W-Appz/" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+							<li><a href="https://www.linkedin.com/in/ike-lim-633049250/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</div>
 					<a href="#about" class="more scrolly">View more</a>
@@ -53,7 +53,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 							<p>Hi there. My name is Ike (ai-ke). Software development and cybersecurity are two of the many technologically related fields that I am passionate about
-								since young. I have worked on many <a class="more scrolly" href="#project_banner">projects</a> on my own and participated in several events in these fields.
+								since young. I have worked on many <a class="more scrolly" href="#projects">projects</a> on my own and participated in several events in these fields.
 							</p>
 						</header>
 						<header class="major">
@@ -107,31 +107,52 @@
 				</section>
 
 				<!-- Project Banner -->
-				<section id="project_banner" class="wrapper style6">
+				<section id="projects" class="wrapper style6">
 					<div class="inner">
 						<header class="major">
 							<h2>Projects</h2>
 							<p>I enjoy developing elegant and efficient software that is clean and easy to use.<br>
-							<p> Technlogies I utilise: </p>				
-						<ul class="icons major">
-							<li style="padding-bottom: 3em;"><span class="icon brands fa-python major"></span></li>
-							<li style="padding-bottom: 3em;"><span class="icon brands fa-java major"></span></li>
-							<li style="padding-bottom: 3em;"><span class="icon brands fa-js major"></span></li>
-							<li style="padding-bottom: 3em;"><span class="icon brands fa-html5 major"><span class="label">HTML</span></span></li>
-							<li style="padding-bottom: 3em;"><span class="icon major"><img src="images/flask.png" style="width: 46px;"></span></li>
-							<li style="padding-bottom: 3em;"><span class="icon brands fa-android major"></span></li>
-							<li style="padding-bottom: 3em;"><span class="icon brands fa-github major"></span></li>
-						</ul>
+							<p> Technlogies I utilise: </p> <br>
+							<div class="icon_grid">
+								<div class="icons">
+									<span class="icon brands fa-python major"></span>
+									<div class="tooltip">Python</div>
+								</div>
+								<div class="icons">
+									<span class="icon solid fa-flask major"></span>
+									<div class="tooltip">Flask</div>
+								</div>
+								<div class="icons">
+									<span class="icon brands fa-java major"></span>
+									<div class="tooltip">Java</div>
+								</div>
+								<div class="icons">
+									<span class="icon brands fa-android major"></span>
+									<div class="tooltip">Android</div>
+								</div>
+								<div class="icons">
+									<span class="icon brands fa-github major"></span>
+									<div class="tooltip">Github</div>
+								</div>	
+								<div class="icons">
+									<span class="icon brands fa-html5 major"></span>
+									<div class="tooltip">HTML</div>
+								</div>
+								<div class="icons">
+									<span class="icon brands fa-js major"></span>
+									<div class="tooltip">Javascript</div>
+								</div>					
+							</div>
 						<p>Of course, I can't call myself a tech guy without some software projects so here are some of mine. </p>
 					</header>
 					</div>
 				</section>
 				<!-- Projects -->
-					<section id="projects" class="wrapper alt style2 ">
+					<section id="projects1" class="wrapper alt style2 ">
 						<section class="spotlight mainproj">
 							<div class="image"><img src="images/passSafe/project.png" alt="PassSafe" /></div>
 							<div class="content">
-								<span class="icon solid fa-thumbtack fa-1x pinned"></span>
+								<div class="icon solid fa-thumbtack fa-1x pinned"></div>
 								<h2>PassSafe<br/>
 								W-Appz</h2>
 								<p>Want to be safe online but too many passwords to remember? Do not fear, PassSafe is here!</p>
@@ -164,7 +185,7 @@
 								<ul class="icons major">
 									<li><span class="icon brands fa-html5 major"><span class="label">HTML</span></span></li>
 									<li><span class="icon brands fa-js major"><span class="label">Javascript</span></span></li>
-									<li><span class="icon major"><img src="images/flask.png" style="width: 46px;"></span></li>
+									<li><span class="icon solid fa-flask major"></span></li>
 									<li><span class="icon brands fa-python major"><span class="label">Python</span></span></li>
 								</ul>
 							</div>
