modified about, projects and typos in passsafe

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 								<li class="icon solid fa-school lastli">
 									<h3>Junior College</h3>
 									<p class="sub">Anglo-Chinese Junior College</p>
+									<p> Technological Council EXCO 2021 - 2022</p>
 									<p> 2021 - Present</p>
 								</li>
 								<li class="icon solid fa-laptop-code">
