--- a/passsafe.html
+++ b/passsafe.html
@@ -41,7 +41,7 @@
 								the different platforms that they might be using. However, this leads to a key problem - remembering them.
 								I asked some people about this and many seemed to possess this issue as well. Moreover, many password vaults out there are sometimes too
 								much of a hassle to set up or contain too many features which may be difficult to implement and understand. Hence, I decided to create my own
-								simple yet secure password vault that anyone can comprehend and use.
+								simple, yet secure password vault that anyone can comprehend and use safely.
 							<hr>
 							<p><b><i>PassSafe</i></b> is a simple, free and easy to use password manager that securely stores your passwords offline with fast and efficient retrieval. </p>
 							<h4>Features</h4>
