modifed copyright and links

--- a/index.html
+++ b/index.html
@@ -211,23 +211,19 @@
 								<h2>Here's a quote to keep you going...</h2>
 								<blockquote id="random_quote"></blockquote>
 							</header>
-							<!-- <ul class="actions">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
-							</ul> -->
 						</div>
 					</section>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li class="ig"><a href="https://www.instagram.com/ikeawesom" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/ikeawesom/" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://github.com/W-Appz/" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://www.linkedin.com/in/ike-lim-633049250/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li class="ig"><a href="https://www.instagram.com/ikeawesom" class="icon brands fa-instagram" target="_blank"></a></li>
+							<li><a href="https://github.com/ikeawesom/" class="icon brands fa-github" target="_blank"></a></li>
+							<li><a href="https://github.com/W-Appz/" class="icon brands fa-github" target="_blank"></a></li>
+							<li><a href="https://www.linkedin.com/in/ike-lim-633049250/" class="icon brands fa-linkedin" target="_blank"></a></li>
 						</ul>
 						<ul class="copyright">
-							Copyright <li>&copy; 2022 Ike Lim. All rights reserved. </li>
+							<li>&copy; 2022 Ike Lim</li>
 						</ul>
 					</footer>
 
