--- a/passsafe.html
+++ b/passsafe.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>PassSafe - W-Appz</title>
+		<title>PassSafe</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-        <link rel="icon" href="images/passSafe/icon.png">
+        <link rel="icon" href="images/icon.png">
 	</head>
 
 	<body class="is-preload">
@@ -66,7 +66,7 @@
 								}
 							</script>
 
-							<p>For screenshots and more information, visit my App Developer Github <a href="https://github.com/W-Appz/PassSafe/" target="_blank">here</a>.</p>
+							<p>For screenshots and more information, visit my App Developer Github (W-Appz) <a href="https://github.com/W-Appz/PassSafe/" target="_blank">here</a>.</p>
 							
 							
 
@@ -77,13 +77,13 @@
 				<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li class="ig"><a href="https://www.instagram.com/ikeawesom" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/ikeawesom/" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://github.com/W-Appz/" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/ike-lim-633049250/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li class="ig"><a href="https://www.instagram.com/ikeawesom" class="icon brands fa-instagram" target="_blank"></a></li>
+						<li><a href="https://github.com/ikeawesom/" class="icon brands fa-github" target="_blank"></a></li>
+						<li><a href="https://github.com/W-Appz/" class="icon brands fa-github" target="_blank"></a></li>
+						<li><a href="https://www.linkedin.com/in/ike-lim-633049250/" class="icon brands fa-linkedin" target="_blank"></a></li>
 					</ul>
 					<ul class="copyright">
-						Copyright <li>&copy; 2022 Ike Lim. All rights reserved. </li>
+						<li>&copy; 2022 Ike Lim</li>
 					</ul>
 				</footer>
 
