fixed bug with project

--- a/index.html
+++ b/index.html
@@ -114,36 +114,36 @@
 							<h2>Projects</h2>
 							<p>I enjoy developing elegant and efficient software that is clean and easy to use.<br>
 							<p> Technlogies I utilise: </p> <br>
-							<div class="icon_grid">
-								<div class="icons">
+							<ul class="icons major icon_grid">
+								<li class="icons">
 									<span class="icon brands fa-python major"></span>
 									<div class="tooltip">Python</div>
-								</div>
-								<div class="icons">
+								</li>
+								<li class="icons">
 									<span class="icon solid fa-flask major"></span>
 									<div class="tooltip">Flask</div>
-								</div>
-								<div class="icons">
+								</li>
+								<li class="icons">
 									<span class="icon brands fa-java major"></span>
 									<div class="tooltip">Java</div>
-								</div>
-								<div class="icons">
+								</li>
+								<li class="icons">
 									<span class="icon brands fa-android major"></span>
 									<div class="tooltip">Android</div>
-								</div>
-								<div class="icons">
+								</li>
+								<li class="icons">
 									<span class="icon brands fa-github major"></span>
 									<div class="tooltip">Github</div>
-								</div>	
-								<div class="icons">
+								</li>	
+								<li class="icons">
 									<span class="icon brands fa-html5 major"></span>
 									<div class="tooltip">HTML</div>
-								</div>
-								<div class="icons">
+								</li>
+								<li class="icons">
 									<span class="icon brands fa-js major"></span>
-									<div class="tooltip">Javascript</div>
-								</div>					
-							</div>
+									<div class="tooltip">JScript</div>
+								</li>					
+							</ul>
 						<p>Of course, I can't call myself a tech guy without some software projects so here are some of mine. </p>
 					</header>
 					</div>
@@ -157,8 +157,8 @@
 								<h2>PassSafe<br/>
 								W-Appz</h2>
 								<p>Want to be safe online but too many passwords to remember? Do not fear, PassSafe is here!</p>
-								<p> Find out more <a href="passsafe.html">here</a>.</p>
-								<ul class="icons major">
+								<p> Find out more <a href="passsafe.html">here</a>.</p> <br>
+								<ul class="icons major icon_grid">
 									<li><span class="icon brands fa-android major"><span class="label">Android</span></span></li>
 									<li><span class="icon brands fa-java major"><span class="label">Java</span></span></li>
 									<li><span class="icon brands fa-github major"><span class="label">Github</span></span></li>
@@ -168,12 +168,12 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/projects/econs.png" alt="Economics Assignment Manager" /></div><div class="content">
 								<h2>Economics Assignment Manager</h2>
-								<p>This project was specially designed to meet to the needs of an economics teacher in ACJC, who needed
-									a more efficient way to mangage the mass submissions of assignments.</p>
+								<p>This project was specially designed to meet the needs of an economics teacher in ACJC, who needed
+									a more efficient way to manage the mass submissions of assignments.</p>
 								<p> This made use of python's turtle library to create the simple graphical user interface (GUI), with
 									specific details for the users' desires.
-								</p>
-								<ul class="icons major">
+								</p> <br>
+								<ul class="icons major icon_grid">
 									<li><span class="icon brands fa-python major"></span></li>
 								</ul>
 							</div>
@@ -183,7 +183,8 @@
 								<h2>Clash Royale Character Profile</h2>
 								<p>First HTML project that I did, and with a more personal touch. Game theme used to create a brief storyline
 									using javascript events and audio, ultimately leading up to a character profile with even more features. </p>
-								<ul class="icons major">
+								<br>
+									<ul class="icons major icon_grid">
 									<li><span class="icon brands fa-html5 major"><span class="label">HTML</span></span></li>
 									<li><span class="icon brands fa-js major"><span class="label">Javascript</span></span></li>
 									<li><span class="icon solid fa-flask major"></span></li>
@@ -195,7 +196,8 @@
 							<div class="image"><img src="images/projects/site.png" alt="Personal Site" /></div><div class="content">
 								<h2>Personal Site</h2>
 								<p>Wait.. that's this site!</p>
-								<ul class="icons major">
+								<br>
+								<ul class="icons major icon_grid">
 									<li><span class="icon brands fa-html5 major"><span class="label">HTML</span></span></li>
 									<li><span class="icon brands fa-js major"><span class="label">Javascript</span></span></li>
 									<li><span class="icon brands fa-github major"><span class="label">Github</span></span></li>
