added google analytics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-J2G5XG0Z6B"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'G-J2G5XG0Z6B');
+		</script>
 		<title>Ike Lim</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
