--- a/passsafe.html
+++ b/passsafe.html
@@ -1,19 +1,21 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-J2G5XG0Z6B"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'G-J2G5XG0Z6B');
-		</script>
 		<title>PassSafe</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-        <link rel="icon" href="images/icon.png">
+        	<link rel="icon" href="images/icon.png">
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-J2G5XG0Z6B"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-J2G5XG0Z6B');
+		</script>
 	</head>
 
 	<body class="is-preload">
