--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="icon" href="images/icon.png">
 		
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-J2G5XG0Z6B"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-
-		  gtag('config', 'G-J2G5XG0Z6B');
-		</script>
+		{% include analytics.html %}
 	</head>
 	<body class="landing is-preload">
 
