--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				</section>
 
 				<!-- Project Banner -->
-				<section id="projects" class="wrapper style6">
+				<section id="projects" class="wrapper style6 special">
 					<div class="inner">
 						<header class="major">
 							<h2>Projects</h2>
